# antlr4-to-mlir

./: .gitignore  CMakeLists.txt  LICENSE  MaGrammaire.g4  README.md  TODO  example.g4
example/: MiniJava.g4  test.minijava
example/MiniJava/include/MiniJava/: CMakeLists.txt  MiniJava.h  MiniJava.td  MiniJavaDialect.h  MiniJavaDialect.td  MiniJavaPredicates.td  MiniJavaTypes.h  MiniJavaTypes.td
example/MiniJava/lib/MiniJava/: CMakeLists.txt  MiniJava.cpp  MiniJavaDialect.cpp  MiniJavaTypes.cpp
libs/: Antlr4Grammar.interp  Antlr4Grammar.tokens  Antlr4GrammarBaseVisitor.cpp  Antlr4GrammarBaseVisitor.h  Antlr4GrammarLexer.cpp  Antlr4GrammarLexer.h  Antlr4GrammarLexer.interp  Antlr4GrammarLexer.tokens  Antlr4GrammarParser.cpp  Antlr4GrammarParser.h  Antlr4GrammarVisitor.cpp  Antlr4GrammarVisitor.h
src/: Antlr4Grammar.g4  CMakeLists.txt  GrammarInfos.cpp  GrammarInfos.hpp  StandaloneInitializer.cpp  StandaloneInitializer.hpp  example.g4  grammarVisitor.cpp  grammarVisitor.hpp  main.cpp
src/libs/: Antlr4Grammar.interp  Antlr4Grammar.tokens  Antlr4GrammarBaseVisitor.h  Antlr4GrammarLexer.cpp  Antlr4GrammarLexer.h  Antlr4GrammarLexer.interp  Antlr4GrammarParser.cpp  Antlr4GrammarParser.h  Antlr4GrammarVisitor.cpp  Antlr4GrammarVisitor.h
tools/AutoAstUtils/include/AutoAstUtils/: AutoAstUtils.h  AutoAstUtils.td  AutoAstUtilsAttrDefs.h  AutoAstUtilsAttrDefs.td  AutoAstUtilsDialect.h  AutoAstUtilsDialect.td  AutoAstUtilsTypes.h  AutoAstUtilsTypes.td  CMakeLists.txt
tools/AutoAstUtils/lib/AutoAstUtils/: AutoAstUtils.cpp  AutoAstUtilsDialect.cpp  AutoAstUtilsTypes.cpp  CMakeLists.txt
